--- a/MyHome/app/src/main/res/layout/contact_us.xml
+++ b/MyHome/app/src/main/res/layout/contact_us.xml
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/subheader"
-            style="@style/tradeGothicLTStdLight_20"
+            style="@style/tradeGothicLTStd_Dynamic22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/header"
@@ -33,8 +33,7 @@
             android:fontFamily="sans-serif-light"
             android:gravity="center"
             android:lineSpacingExtra="7sp"
-            android:text="@string/contact_us_subheader"
-            android:textSize="22sp" />
+            android:text="@string/contact_us_subheader" />
 
         <ImageView
             android:id="@+id/email_icon"
