--- a/MyHome/app/src/main/res/values/dimens.xml
+++ b/MyHome/app/src/main/res/values/dimens.xml
@@ -21,4 +21,5 @@
     <dimen name="scalable_16">14sp</dimen>
     <dimen name="scalable_18">16sp</dimen>
     <dimen name="scalable_20">18sp</dimen>
+    <dimen name="scalable_22">20sp</dimen>
 </resources>
