--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -31,6 +31,7 @@
                     android:ellipsize="end"
                     android:hint="@string/first_name"
                     android:inputType="textCapWords"
+                    android:maxLength="35"
                     android:maxLines="1" />
 
             </android.support.design.widget.TextInputLayout>
@@ -51,6 +52,7 @@
                     android:ellipsize="end"
                     android:hint="@string/last_name"
                     android:inputType="textCapWords"
+                    android:maxLength="35"
                     android:maxLines="1" />
 
             </android.support.design.widget.TextInputLayout>
@@ -71,6 +73,7 @@
                     android:ellipsize="end"
                     android:hint="@string/preferred_name"
                     android:inputType="textCapWords"
+                    android:maxLength="35"
                     android:maxLines="1" />
 
             </android.support.design.widget.TextInputLayout>
