--- a/MyHome/app/src/main/res/layout/book_done.xml
+++ b/MyHome/app/src/main/res/layout/book_done.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingEnd="12dp"
-        android:paddingStart="64dp">
+        android:paddingStart="12dp">
 
         <TextView
             android:id="@+id/book_success"
@@ -61,6 +61,7 @@
             android:layout_height="30dp"
             android:layout_below="@id/address"
             android:layout_marginTop="35dp"
+            android:layout_toLeftOf="@id/directions_text"
             android:src="@mipmap/map_blue" />
 
         <TextView
@@ -71,9 +72,9 @@
             android:layout_alignBottom="@id/directions_icon"
             android:layout_alignTop="@id/directions_icon"
             android:layout_below="@id/reason"
+            android:layout_centerHorizontal="true"
             android:layout_marginEnd="18dp"
             android:layout_marginStart="18dp"
-            android:layout_toRightOf="@id/directions_icon"
             android:gravity="center_vertical"
             android:text="@string/get_directions"
             android:textColor="@color/primary"
@@ -83,6 +84,7 @@
             android:id="@+id/share_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_alignLeft="@id/directions_icon"
             android:layout_below="@id/directions_icon"
             android:layout_marginTop="40dp"
             android:src="@drawable/share_blue" />
@@ -107,6 +109,7 @@
             android:id="@+id/calendar_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_alignLeft="@id/directions_icon"
             android:layout_below="@id/share_icon"
             android:layout_marginTop="40dp"
             android:src="@mipmap/calendar" />
