Fixed 10699 : AND - overlapping of information in version 4.4

--- a/MyHome/app/src/main/res/layout/adapter_providers_list_item.xml
+++ b/MyHome/app/src/main/res/layout/adapter_providers_list_item.xml
@@ -85,6 +85,7 @@
                 style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/directions"
                 android:layout_below="@+id/docSpeciality"
                 android:text="Denver, CO" />
 
