--- a/MyHome/app/src/main/res/layout/provider_details_location_item.xml
+++ b/MyHome/app/src/main/res/layout/provider_details_location_item.xml
@@ -13,19 +13,24 @@
         style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_marginBottom="6dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="6dp"
+        android:layout_toLeftOf="@+id/pin_icon"
         android:text="90 Madison St \nSte 504 \nDenver, CO 80206"
         tools:ignore="HardcodedText" />
 
     <ImageView
         android:id="@+id/pin_icon"
-        android:layout_width="24dp"
-        android:layout_height="30dp"
-        android:layout_alignBottom="@id/location_text"
+        android:layout_width="40dp"
+        android:layout_height="46dp"
         android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:layout_marginEnd="12dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="16dp"
+        android:padding="8dp"
         android:src="@mipmap/map_blue" />
 
 </RelativeLayout>
