Fixed 10517: Android - If error in data (invalid email) and the user clicks on "DONE" the screen does not display where the error is, appears as if nothing is happening

--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/dialog_personal_scoll_view"
     android:theme="@style/textInputLayoutStyle">
 
     <LinearLayout
@@ -263,6 +264,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/zip_phone_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:baselineAligned="false"
