Login enrollment error copy changed

--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -46,6 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
+                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                 android:hint="@string/first_name"
                 android:inputType="textCapWords"
                 android:maxLength="35"
