--- a/MyHome/app/src/main/res/layout/profile_edit.xml
+++ b/MyHome/app/src/main/res/layout/profile_edit.xml
@@ -174,6 +174,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
+                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                         android:hint="@string/city"
                         android:inputType="text"
                         android:maxLines="2" />
