Filter selection changed to single (except language and group practice). Removed recently viewed from filter.

--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -382,6 +382,7 @@
                 android:id="@+id/translator_language"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                 android:hint="@string/translator_language"
                 android:inputType="textCapWords" />
 
