--- a/MyHome/app/src/main/res/layout/fragment_filter.xml
+++ b/MyHome/app/src/main/res/layout/fragment_filter.xml
@@ -286,6 +286,7 @@
                     android:layout_marginRight="16dp"
                     android:layout_marginBottom="40dp"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:orientation="horizontal">
 
                     <android.support.v7.widget.SwitchCompat
