--- a/MyHome/app/src/main/res/layout/profile_view.xml
+++ b/MyHome/app/src/main/res/layout/profile_view.xml
@@ -107,7 +107,9 @@
                 android:layout_height="wrap_content"
                 android:text="Dignity Health"
                 android:textStyle="bold"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                android:visibility="gone"
+                />
 
             <TextView
                 android:id="@+id/id_label"
@@ -124,7 +126,9 @@
                 android:layout_height="wrap_content"
                 android:text="800-588-2300"
                 android:textStyle="bold"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                android:visibility="gone"
+                />
 
             <TextView
                 android:id="@+id/group_label"
@@ -141,7 +145,9 @@
                 android:layout_height="wrap_content"
                 android:text="230-2333"
                 android:textStyle="bold"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                android:visibility="gone"
+                />
 
             <Button
                 android:id="@+id/sign_out"
