Fixed 10679: overlapping in home and appointments

--- a/MyHome/app/src/main/res/layout/appointment_item.xml
+++ b/MyHome/app/src/main/res/layout/appointment_item.xml
@@ -50,16 +50,18 @@
         style="@style/tradeGothicLTStd_Dynamic16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/facility"
+        android:layout_toLeftOf="@id/pin_icon"
+        android:layout_below="@+id/facility"
         android:layout_marginLeft="12dp"
         android:maxWidth="285dp"
-        android:text="Dr. Steven M. Howard, MD" />
+        android:text="Dr. Steven M. Howard, MD shkjfahkjgkjahgkjahkjghkashgkak" />
 
     <ImageView
         android:id="@+id/pin_icon"
         android:layout_width="24dp"
         android:layout_height="30dp"
-        android:layout_alignBottom="@id/doctor_name"
+        android:layout_marginTop="16dp"
+        android:layout_below="@id/time"
         android:layout_alignLeft="@id/time"
         android:layout_alignRight="@id/time"
         android:layout_marginEnd="12dp"
