added provider details map zoom controls

--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -83,10 +83,10 @@
             map:mapType="normal"
             map:uiCompass="false"
             map:uiRotateGestures="false"
-            map:uiScrollGestures="false"
+            map:uiScrollGestures="true"
             map:uiTiltGestures="false"
-            map:uiZoomControls="false"
-            map:uiZoomGestures="false" />
+            map:uiZoomControls="true"
+            map:uiZoomGestures="true" />
 
         <TextView
             android:id="@+id/facility_address"
