--- a/MyHome/app/src/main/res/layout/appointment_item.xml
+++ b/MyHome/app/src/main/res/layout/appointment_item.xml
@@ -39,8 +39,10 @@
         style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_below="@id/date"
         android:layout_marginLeft="12dp"
+        android:layout_toLeftOf="@+id/pin_icon"
         android:maxWidth="285dp"
         android:text="Sequoia Hospital"
         android:textStyle="bold" />
@@ -50,10 +52,10 @@
         style="@style/tradeGothicLTStd_Dynamic16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/pin_icon"
-        android:layout_below="@id/facility"
         android:layout_alignParentLeft="true"
+        android:layout_below="@id/facility"
         android:layout_marginLeft="12dp"
+        android:layout_toLeftOf="@+id/pin_icon"
         android:maxWidth="285dp"
         android:text="Dr. Steven M. Howard, MD" />
 
@@ -61,12 +63,12 @@
         android:id="@+id/pin_icon"
         android:layout_width="24dp"
         android:layout_height="30dp"
-        android:layout_marginTop="16dp"
-        android:layout_below="@id/time"
         android:layout_alignLeft="@id/time"
         android:layout_alignRight="@id/time"
+        android:layout_below="@id/time"
         android:layout_marginEnd="12dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="16dp"
         android:src="@mipmap/map_blue"
         android:transitionName="@string/transition_appointment_map_pin" />
 
