--- a/MyHome/app/src/main/res/menu/navigation_menu.xml
+++ b/MyHome/app/src/main/res/menu/navigation_menu.xml
@@ -4,25 +4,25 @@
 
     <item
         android:id="@+id/home"
-        android:icon="@mipmap/home_blue"
+        android:icon="@drawable/menu_home"
         android:title="@string/home"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/fad"
-        android:icon="@mipmap/fad_blue"
+        android:icon="@drawable/menu_findcare"
         android:title="@string/find_care"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/appointments"
-        android:icon="@drawable/blue_appointments"
+        android:icon="@drawable/menu_appointments"
         android:title="@string/appointments"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/profile"
-        android:icon="@drawable/dh_profile"
+        android:icon="@drawable/menu_profile"
         android:title="@string/profile"
         app:showAsAction="ifRoom" />
 </menu>
