--- a/MyHome/app/src/main/res/layout/date_picker_dialog.xml
+++ b/MyHome/app/src/main/res/layout/date_picker_dialog.xml
@@ -7,11 +7,10 @@
         android:id="@+id/date_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:calendarViewShown="false"
-        android:datePickerMode="spinner"
-        android:layout_marginTop="10dp">
-
-    </DatePicker>
+        android:datePickerMode="spinner"></DatePicker>
 
     <Button
         android:id="@+id/btn_done"
@@ -23,5 +22,4 @@
         android:layout_marginTop="10dp"
         android:text="@string/done_date_picker"
         android:textSize="@dimen/scalable_16" />
-
 </RelativeLayout>
