--- a/MyHome/app/src/main/res/layout/date_picker_dialog.xml
+++ b/MyHome/app/src/main/res/layout/date_picker_dialog.xml
@@ -15,11 +15,14 @@
     <Button
         android:id="@+id/btn_done"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@id/date_picker"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="10dp"
-        android:text="@string/done_date_picker"
+        android:background="@drawable/button_boarder_search"
+        android:text="@string/ok"
+        android:textColor="@color/accent"
         android:textSize="@dimen/scalable_16" />
 </RelativeLayout>
