Replace the Home icon

--- a/MyHome/app/src/main/res/menu/navigation_menu.xml
+++ b/MyHome/app/src/main/res/menu/navigation_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/home"
-        android:icon="@mipmap/home_blue"
+        android:icon="@drawable/home"
         android:title="@string/home"
         app:showAsAction="always" />
 
