Replace the Profile icon

--- a/MyHome/app/src/main/res/menu/navigation_menu.xml
+++ b/MyHome/app/src/main/res/menu/navigation_menu.xml
@@ -22,7 +22,7 @@
 
     <item
         android:id="@+id/profile"
-        android:icon="@drawable/dh_profile"
+        android:icon="@drawable/profile"
         android:title="@string/profile"
         app:showAsAction="ifRoom" />
 </menu>
