--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -119,15 +119,13 @@
                         android:layout_height="wrap_content"
                         android:layout_toLeftOf="@+id/password_criteria"
                         app:errorTextAppearance="@style/error_appearance"
-                        app:hintTextAppearance="@style/hint_appearance"
-                        app:passwordToggleEnabled="true"
-                        app:passwordToggleTint="@color/primary">
+                        app:hintTextAppearance="@style/hint_appearance">
 
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:drawableRight="@mipmap/show_password"
+                            android:drawableRight="@mipmap/hide_password"
                             android:hint="@string/prompt_password"
                             android:imeOptions="actionNext"
                             android:inputType="textPassword"
