--- a/MyHome/app/src/main/res/layout/fragment_filter.xml
+++ b/MyHome/app/src/main/res/layout/fragment_filter.xml
@@ -185,7 +185,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/sortByGroup"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
                         <android.support.v7.widget.AppCompatSeekBar
                             android:id="@+id/distanceRange"
