--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -235,7 +235,7 @@
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="13dp"
                     android:ellipsize="end"
-                    android:hint="@string/dashboard_search_hint"
+                    android:hint="@string/search_hint"
                     android:imeOptions="actionSearch"
                     android:inputType="text"
                     android:lineSpacingExtra="5sp"
