--- a/MyHome/app/src/main/res/layout/fragment_provider_details.xml
+++ b/MyHome/app/src/main/res/layout/fragment_provider_details.xml
@@ -9,5 +9,13 @@
         <include
             android:id="@+id/provider_details"
             layout="@layout/provider_details" />
+
+        <TextView
+            android:id="@+id/errorView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/something_went_wrong"
+            android:visibility="gone" />
     </FrameLayout>
 </layout>
