--- a/MyHome/app/src/main/res/layout/fragment_fad.xml
+++ b/MyHome/app/src/main/res/layout/fragment_fad.xml
@@ -81,7 +81,8 @@
                         android:imeOptions="actionSearch"
                         android:inputType="text"
                         android:longClickable="false"
-                        android:padding="8dp" />
+                        android:padding="8dp"
+                        android:scrollHorizontally="true" />
                 </android.support.v7.widget.CardView>
             </RelativeLayout>
         </RelativeLayout>
