--- a/MyHome/app/src/main/res/layout/home.xml
+++ b/MyHome/app/src/main/res/layout/home.xml
@@ -242,6 +242,7 @@
                     android:paddingLeft="6dp"
                     android:paddingRight="6dp"
                     android:paddingStart="10dp"
+                    android:scrollHorizontally="true"
                     android:stateListAnimator="@null"
                     android:textColorHint="@color/db_gunmetal" />
 
