--- a/MyHome/app/src/main/res/menu/toolbar_menu.xml
+++ b/MyHome/app/src/main/res/menu/toolbar_menu.xml
@@ -44,4 +44,10 @@
         android:icon="@android:drawable/ic_menu_agenda"
         android:title="@string/sign_out"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/version"
+        android:icon="@android:drawable/ic_menu_agenda"
+        android:title="Version"
+        app:showAsAction="never" />
 </menu>
