Fixed 11258: Number Pad now shows up for Date of Birth (same number pad as the phone number)

--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -186,7 +186,7 @@
                 android:digits="0123456789"
                 android:ellipsize="end"
                 android:hint="@string/date_of_birth"
-                android:inputType="number"
+                android:inputType="number|phone"
                 android:maxLength="10"
                 android:maxLines="1" />
 
