--- a/MyHome/app/src/main/res/layout/fragment_list_dialog.xml
+++ b/MyHome/app/src/main/res/layout/fragment_list_dialog.xml
@@ -27,6 +27,7 @@
                 android:src="@mipmap/xblue" />
 
             <TextView
+                android:id="@+id/title"
                 style="@style/tradeGothicLTStdLight_20"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
