Reason For Visit should now only capitalize sentences, not words.

--- a/MyHome/app/src/main/res/layout/book_dialog_personal.xml
+++ b/MyHome/app/src/main/res/layout/book_dialog_personal.xml
@@ -439,7 +439,7 @@
                 android:background="@drawable/edit_text_boarder_grey"
                 android:gravity="left"
                 android:hint="@string/booking_reason_hint"
-                android:inputType="textCapWords|textMultiLine"
+                android:inputType="textCapSentences|textMultiLine"
                 android:maxLength="350" />
 
         </android.support.design.widget.TextInputLayout>
