--- a/MyHome/app/src/main/res/layout/appointments_details.xml
+++ b/MyHome/app/src/main/res/layout/appointments_details.xml
@@ -42,25 +42,44 @@
             android:layout_alignParentEnd="true"
             android:src="@mipmap/calendar" />
 
-        <TextView
-            android:id="@+id/doctor_name"
-            style="@style/tradeGothicLTStd_Dynamic20"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/doctor_name_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/time_header"
-            android:layout_marginTop="30dp"
-            android:gravity="center"
-            android:text="Dr. Steven M. Howard, MD"
-            android:textIsSelectable="true"
-            android:textStyle="bold"
-            tools:ignore="HardcodedText" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/doctor_name"
+                style="@style/tradeGothicLTStd_Dynamic20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="30dp"
+                android:layout_toLeftOf="@+id/apt_details_fav"
+                android:gravity="center"
+                android:text="Dr. Steven M. Howard, MD"
+                android:textIsSelectable="true"
+                android:textStyle="bold"
+                tools:ignore="HardcodedText" />
+
+            <ImageView
+                android:id="@+id/apt_details_fav"
+                android:layout_width="27dp"
+                android:layout_height="31dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_favorite_stroke" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/facility_name"
             style="@style/tradeGothicLTStd_Dynamic20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/doctor_name"
+            android:layout_below="@id/doctor_name_layout"
             android:layout_marginTop="12dp"
             android:text="Sequoia Hospital"
             android:textIsSelectable="true"
