--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -55,26 +55,22 @@
             <Button
                 android:id="@+id/book_appointment"
                 style="@style/primaryButtonStyle"
-                android:layout_width="140dp"
+                android:layout_width="wrap_content"
                 android:layout_height="45dp"
-                android:layout_alignLeft="@id/doctor_name"
                 android:layout_marginEnd="12dp"
                 android:layout_marginTop="12dp"
-                android:layout_toLeftOf="@+id/provider_details_fav"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:text="@string/book_appointment"
-                android:textStyle="bold"
-                android:visibility="gone" />
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/provider_details_fav"
                 android:layout_width="33dp"
                 android:layout_height="28dp"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/speciality"
                 android:layout_marginRight="12dp"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/ic_favorite_stroke"
-                android:tint="@color/accent" />
+                android:src="@drawable/ic_favorite_stroke" />
         </LinearLayout>
 
         <com.github.aakira.expandablelayout.ExpandableLinearLayout
